samplr/kubernetes/deployment.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplrd-rtr
  labels:
    app: samplrd-rtr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: samplrd-rtr
  template:
    metadata:
      labels:
        app: samplrd-rtr
    spec:
      serviceAccountName: samplr-rtr-sa
      containers:
      - name: esp
        image: gcr.io/endpoints-release/endpoints-runtime:1
        args: [
          "--http_port", "8080",
          "--backend", "grpc://127.0.0.1:80",
          "--service=SERVICE_NAME",
          "--version=SERVICE_CONFIG_ID",
          "--healthz=_healthz"
        ]
        ports:
          - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /_healthz
            port: 8080
          initialDelaySeconds: 30
      - name: samplrd-rtr
        image: gcr.io/PROJECT_ID/samplr-rtr:BUILD_ID
        imagePullPolicy: Always
        command: [
          "/samplr-rtr",
          "--listen=:80",
          "--verbose",
        ]
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/secrets/google
          name: gcp-sa
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:80"]
          periodSeconds: 10
          initialDelaySeconds: 5
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:80"]
          initialDelaySeconds: 5
        resources:
          limits:
            cpu: "200m"
            memory: "100Mi"
          requests:
            cpu: "100m"
            memory: "50Mi"
      volumes:
      - name: gcp-sa
        secret:
          secretName: SERVICE_ACCOUNT_SECRET_NAME
---
apiVersion: v1
kind: Service
metadata:
  name: esp-samplrd-rtr-np
spec:
  ports:
    - port: 80
      targetPort: 8080
      name: http
  selector:
    app: samplrd-rtr
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: samplrd-sprvsr
  labels:
    app: samplrd-sprvsr
spec:
  replicas: 1 # MUST BE 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: samplrd-sprvsr
  template:
    metadata:
      labels:
        app: samplrd-sprvsr
    spec:
      serviceAccountName: samplr-sprvsr-sa
      containers:
      - name: samplrd-sprvsr
        image: gcr.io/PROJECT_ID/samplr-sprvsr:BUILD_ID
        imagePullPolicy: Always
        command: [
          "/samplr-sprvsr",
          "--listen=:80",
          "--verbose",
          "--gcp-project=PROJECT_ID",
          "--settings-bucket=SETTINGS_BUCKET",
          "--repos-file=REPOS_FILE",
          "--service-account-secret=SERVICE_ACCOUNT_SECRET_NAME",
          "--samplr-image-name=gcr.io/PROJECT_ID/samplrd:BUILD_ID",
        ]
        livenessProbe:
          httpGet:
            path: /_healthz
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /var/secrets/google
          name: gcp-sa
      volumes:
      - name: gcp-sa
        secret:
          secretName: SERVICE_ACCOUNT_SECRET_NAME
---
apiVersion: v1
kind: Service
metadata:
  name: samplrd-sprvsr-cip
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: samplrd-sprvsr
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: esp-samplrd-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: samplr-ip
    networking.gke.io/managed-certificates: samplr-endpoints-cert
  labels:
    app: samplrd
spec:
  backend:
    serviceName: esp-samplrd-rtr-np
    servicePort: 80
